Setted main fonts, vars, and basic options for page.

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -81,6 +81,8 @@ a {
 .container {
   margin: 0 auto;
   max-width: var(--container-width);
+  background-color: var(--light-bg-color);
+  border-radius: 5px ;
 }
 
 .centered {
