--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,7 +1,9 @@
 :root {
-  --font-family: "Open Sans", sans-serif;
-  --container-width: 1170px;
+  --font-family: "Poppins", sans-serif;
+  --container-width: 1200px;
 
   --light-color: #fff;
-  --dark-color: #000;
+  --light-bg-color: #E9E9E9;
+  --dark-color: #252525;
+  --blue-button-color: #0364F4;
 }
