--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,6 @@
-// @include font-face("fontName", "../fonts/fontName", 400, normal);
+@include font-face("Poppins", "Poppins-Regular", 400, normal);
+@include font-face("Poppins", "Poppins-SemiBold", 600, bold);
+@include font-face("Poppins", "Poppins-ExtraBold", 800, heavy);
+@include font-face("Poppins", "Poppins-Bold", 700, bold);
+//@include font-face("Futura", "Futura-Light", 300, light);
+
