Added header and hero section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,26 @@
 <header class="header">
   <div class="container">
+    <div class="header__container">
+        <nav class="header__menu">
+          <ul class="header__menu-list list-reset">
+            <li class="header__menu-list-item">
+              <a href="" class="header__menu-list-link">ПРО КЛІНІКУ</a>
+            </li>
+            <li class="header__menu-list-item">
+              <a href="" class="header__menu-list-link">ЛІКАРІ</a>
+            </li>
+            <li class="header__menu-list-item">
+              <a href="" class="header__menu-list-link">КОНТАКТИ</a>
+            </li>
+            <li class="header__menu-list-item">
+              <a href="" class="header__menu-list-link">ПОСЛУГИ</a>
+            </li>
+            <li class="header__menu-list-item">
+              <a href="" class="header__menu-list-link">ЗАПИСАТИСЯ </a>
+            </li>
+          </ul>
+        </nav>
+      </a>
+    </div>
   </div>
 </header>
